[package]
name = "sn0int-signal"
version = "0.1.0"
authors = ["user"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-web = "2.0.0"
structopt = "0.3.14"
actix-rt = "1.1.1"
serde = "1.0.111"
anyhow = "1.0.31"
tokio = { version="0.2.21", features=["process"] }
