[package]
name = "sn0int-signal"
version = "0.1.0"
description = "signal webhook server for sn0int"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0"
repository = "https://github.com/kpcyrd/sn0int-signal"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-web = "2.0.0"
structopt = "0.3.14"
actix-rt = "1.1.1"
serde = "1.0.111"
anyhow = "1.0.31"
tokio = { version="0.2.21", features=["process"] }
